# iscore-app-interaction

./: README.md  commandes-ossia.txt  rdv_client_3mars.odt
addon/: notes_iscore.txt  notes_plugin.odt  rdv_client_3mars.odt
addon/fichiers_tests/: test30mars.scorejson  test_dataspace_processing..scorejson  test_dataspace_processing.scorejson  tests_format_binary.scorebin
addon/iscore-addon-app-interaction/: CMakeLists.txt  CMakeLists.txt~  iscore_addon_app_interaction.cpp  iscore_addon_app_interaction.hpp
addon/iscore-addon-app-interaction/AppInteraction/ApplicationPlugin/: AppInteractionApplicationPlugin.cpp  AppInteractionApplicationPlugin.hpp
addon/iscore-addon-app-interaction/AppInteraction/Commands/: AddEntity.cpp  AddEntity.hpp  AppInteractionCommandFactory.hpp  ChangeAddress.cpp  ChangeAddress.hpp  ChangeInteractionType.cpp  ChangeInteractionType.hpp  ChangeMobileDevice.cpp  ChangeMobileDevice.hpp  SetAppInteractionMax.hpp  SetAppInteractionMin.hpp
addon/iscore-addon-app-interaction/AppInteraction/Connection/: Connection.cpp  Connection.hpp  ConnectionFaussaire.cpp  ConnectionFaussaire.hpp  ConnectionManager.cpp  ConnectionManager.hpp  ConnectionManagerFaussaire.cpp  ConnectionManagerFaussaire.hpp  MockConnection.cpp  MockConnection.hpp  MockConnectionManager.cpp  MockConnectionManager.hpp
addon/iscore-addon-app-interaction/AppInteraction/Connexion/: Connexion.cpp  Connexion.hpp
addon/iscore-addon-app-interaction/AppInteraction/DocumentPlugin/: AppInteractionDocumentPlugin.cpp  AppInteractionDocumentPlugin.hpp
addon/iscore-addon-app-interaction/AppInteraction/Panel/: AppInteractionPanelDelegate.cpp  AppInteractionPanelDelegate.hpp
addon/iscore-addon-app-interaction/AppInteraction/PolymorphicEntity/: PolymorphicEntity.cpp  PolymorphicEntity.cpp~  PolymorphicEntity.hpp  PolymorphicEntity.hpp~  PolymorphicEntityFactory.cpp  PolymorphicEntityFactory.cpp~  PolymorphicEntityFactory.hpp
addon/iscore-addon-app-interaction/AppInteraction/PolymorphicEntity/Implementation/: ConcretePolymorphicEntity.cpp  ConcretePolymorphicEntity.hpp  ConcretePolymorphicEntity.hpp~
addon/iscore-addon-app-interaction/AppInteraction/Process/: AppInteractionProcessFactory.hpp  AppInteractionProcessMetadata.hpp  AppInteractionProcessModel.cpp  AppInteractionProcessModel.hpp  TutorialProcessModel.cpp~
addon/iscore-addon-app-interaction/AppInteraction/Process/Executor/: AppInteractionProcessExecutor.cpp  AppInteractionProcessExecutor.cpp~  AppInteractionProcessExecutor.hpp
addon/iscore-addon-app-interaction/AppInteraction/Process/Inspector/: AppInteractionProcessInspector.cpp  AppInteractionProcessInspector.hpp
addon/iscore-addon-app-interaction/AppInteraction/Process/Layer/: AppInteractionProcessLayer.hpp  AppInteractionProcessLayerFactory.hpp  AppInteractionProcessPresenter.cpp  AppInteractionProcessPresenter.hpp  AppInteractionProcessView.cpp  AppInteractionProcessView.hpp
addon/iscore-addon-app-interaction/AppInteraction/Process/LocalTree/: AppInteractionProcessLocalTree.cpp  AppInteractionProcessLocalTree.hpp
addon/iscore-addon-app-interaction/AppInteraction/Process/State/Widgets/: InteractionTypeWidget.cpp  InteractionTypeWidget.hpp  MobileDevicesWidget.cpp  MobileDevicesWidget.hpp
addon/iscore-addon-app-interaction/AppInteraction/SimpleElement/: SimpleElement.cpp  SimpleElement.hpp  SimpleEntity.cpp  SimpleEntity.hpp
addon/iscore-addon-tutorial/: README.md  iscore_addon_tutorial.cpp  iscore_addon_tutorial.hpp
addon/iscore-addon-tutorial/ReadMe/: 1.md  2.md  3.md
addon/iscore-addon-tutorial/Tutorial/Commands/: AddBanana.cpp  (+6 more)
iscoreApp /: InteractionMenu_copy.qml  InteractionPage.ui.qml  MainForm.qml  MainForm_copy.ui.qml  Makefile  Search.qml  iscore  main.qml  main.qml.autosave  qml.qrc  qrc_qml.cpp
mobile/build-i-score-Android_for_x86_GCC_4_9_Qt_5_7_1_68ac4f-Debug/: Makefile  android-libi-score.so-deployment-settings.json  app_process
mobile/build-i-score-Android_for_x86_GCC_4_9_Qt_5_7_1_68ac4f-Debug/android-build/: AndroidManifest.xml  gradle.properties  local.properties
mobile/build-i-score-Desktop_Qt_5_7_1_GCC_64bit-Debug/: Makefile  i-score  qrc_qml.cpp
mobile/i-score/: database.json  i-score.pro
simple_app/: ClientConnection.cpp  ClientConnection.hpp  CountDown.qml  CountDown0.qml  GridView.ui.qml  InterExplanation.ui.qml  InteractionsMenu.qml  InteractionsMenu.ui.qml  LostConnection.qml  MainForm.ui.qml  MainForm_copy.ui.qml  Principal.qml  SearchArea.ui.qml  Signal.cpp  Signal.hpp  extract.cpp  extract.hpp  interactions.json  main.cpp  main.qml  maine.qml  mainmw.qml  qml.qrc  simple_app.pro
testapp/: BusyIndicatorPage.qml  CountDown.qml  InteractionMenu.qml  MainForm.qml  Makefile  Search.qml  iscore  iscore.pro  iscore.pro.user.2338e33  iscore.pro.user.5ef66b7  main.cpp  main.qml  qml.qrc  qrc_qml.cpp
(+27 files in other folders)
